--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="panel panel-essentials">
-                <a href="https://twitter.com/JiggedIO"><div class="panel-main">
+                <a href="https://twitter.com/jiggedio/status/1281792908195237889" target="_blank"><div class="panel-main">
                     <img src="images/jiggedessentials.png" alt="jigged essentials logo" loading="lazy">
                 </div></a>
                 <div class="tags">
@@ -69,13 +69,24 @@
                 </div>
             </div>
             <div class="panel panel-aurora">
-                <a href="https://auroraproxies.netlify.app"><div class="panel-main">
+                <a href="https://auroraproxies.com" target="_blank"><div class="panel-main">
                     <img src="images/aurora.png" alt="aurora proxies logo" loading="lazy">
                 </div></a>
                 <div class="tags">
                     <ul>
                         <li>Front-end</li>
                         <li>UI Design</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="panel panel-hayai">
+                <a href="https://twitter.com/hayaiaio" target="_blank"><div class="panel-main">
+                    <img src="images/hayai.png" alt="hayai aio logo" loading="lazy">
+                </div></a>
+                <div class="tags">
+                    <ul>
+                        <li>UI Design</li>
+                        <li>Branding</li>
                     </ul>
                 </div>
             </div>
@@ -91,7 +102,7 @@
                 </div>
             </div>
             <div class="panel panel-lighttools">
-                <a href="#"><div class="panel-main">
+                <a href="#" target="_blank"><div class="panel-main">
                     <img src="images/lighttools.png" alt="lightools logo" loading="lazy">
                 </div></a>
                 <div class="tags">
@@ -100,18 +111,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="panel panel-hayai">
-                <a href="https://twitter.com/hayaiaio"><div class="panel-main">
-                    <img src="images/hayai.png" alt="hayai aio logo" loading="lazy">
-                </div></a>
-                <div class="tags">
-                    <ul>
-                        <li>Branding</li>
-                    </ul>
-                </div>
-            </div>
             <div class="panel panel-alphamails">
-                <a href="https://twitter.com/AlphaMails"><div class="panel-main">
+                <a href="https://twitter.com/AlphaMails" target="_blank"><div class="panel-main">
                     <img src="images/alphamails.png" alt="alpha mails logo" loading="lazy" style="max-height: 75px;">
                 </div></a>
                 <div class="tags">
