Revert "Remove unnecessary div tag"
This reverts commit d7b009d618fca017d85926d8451cbd7232814035.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="panel panel-snowplace">
                 <a href="https://snow.place" target="_blank"><div class="panel-main">
                     <img src="images/snowplace.svg" alt="snowplace logo" loading="lazy">
-                </a>
+                </div></a>
                 <div class="tags">
                     <ul>
                         <li>Creator</li>
@@ -31,7 +31,7 @@
             <div class="panel panel-evo">
                 <a href="https://evoproxies.com" target="_blank"><div class="panel-main">
                     <img src="images/evo.png" alt="evo proxies logo" loading="lazy">
-                </a>
+                </div></a>
                 <div class="tags">
                     <ul>
                         <li>Front-end</li>
@@ -43,7 +43,7 @@
             <div class="panel panel-worldtrivia">
                 <a href="https://worldtrivia.netlify.app/" target="_blank"><div class="panel-main">
                     <img src="images/worldtrivia.png" alt="world trivia logo" loading="lazy">
-                </a>
+                </div></a>
                 <div class="tags">
                     <ul>
                         <li>Front-end</li>
@@ -55,7 +55,7 @@
             <div class="panel panel-essentials">
                 <a href="https://twitter.com/jiggedio/status/1281792908195237889" target="_blank"><div class="panel-main">
                     <img src="images/jiggedessentials.png" alt="jigged essentials logo" loading="lazy">
-                </a>
+                </div></a>
                 <div class="tags">
                     <ul>
                         <li>Front-end</li>
@@ -66,7 +66,7 @@
             <div class="panel panel-aurora">
                 <a href="https://auroraproxies.com" target="_blank"><div class="panel-main">
                     <img src="images/aurora.png" alt="aurora proxies logo" loading="lazy">
-                </a>
+                </div></a>
                 <div class="tags">
                     <ul>
                         <li>Front-end</li>
@@ -77,7 +77,7 @@
             <div class="panel panel-hayai">
                 <a href="https://twitter.com/hayaiaio" target="_blank"><div class="panel-main">
                     <img src="images/hayai.png" alt="hayai aio logo" loading="lazy">
-                </a>
+                </div></a>
                 <div class="tags">
                     <ul>
                         <li>UI Design</li>
@@ -88,7 +88,7 @@
             <div class="panel panel-elva">
                 <a href="https://elva.gg" target="_blank"><div class="panel-main">
                     <img src="images/elva.png" alt="elva logo" loading="lazy">
-                </a>
+                </div></a>
                 <div class="tags">
                     <ul>
                         <li>UI Design</li>
@@ -99,7 +99,7 @@
             <div class="panel panel-lighttools">
                 <a href="#" target="_blank"><div class="panel-main">
                     <img src="images/lighttools.png" alt="lightools logo" loading="lazy">
-                </a>
+                </div></a>
                 <div class="tags">
                     <ul>
                         <li>Branding</li>
@@ -109,7 +109,7 @@
             <div class="panel panel-alphamails">
                 <a href="https://twitter.com/AlphaMails" target="_blank"><div class="panel-main">
                     <img src="images/alphamails.png" alt="alpha mails logo" loading="lazy" style="max-height: 75px;">
-                </a>
+                </div></a>
                 <div class="tags">
                     <ul>
                         <li>Branding</li>
