--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     <ul>
                         <li>UI Design</li>
                         <li>Branding</li>
+                        <li>Motion</li>
                     </ul>
                 </div>
             </div>
